Added and fixed the intro slider activity

--- a/StartupCarvaan/app/src/main/res/values/colors.xml
+++ b/StartupCarvaan/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="lightgrey">#EEEEEE</color>
     <color name="goodgrey">#535353</color>
     <color name="yellow">#F8BA0F</color>
+    <color name="colorTransparentWhite">#cccccc</color>
 
 </resources>
