--- a/StartupCarvaan/app/src/main/res/layout/activity_create_profile.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_create_profile.xml
@@ -86,6 +86,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <EditText
+                        android:id="@+id/displayName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -96,6 +97,7 @@
                         android:textStyle="bold" />
 
                     <EditText
+                        android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/proximanovaregular"
@@ -155,6 +157,7 @@
                         </LinearLayout>
 
                         <EditText
+                            android:id="@+id/description"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
@@ -217,6 +220,7 @@
 
                             </TextView>
                             <EditText
+                                android:id="@+id/userPhone"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:hint="enter your contact number"
@@ -226,7 +230,7 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:gravity="center_vertical"
@@ -240,7 +244,8 @@
                                 android:src="@drawable/ic_email_24dp" />
 
                             <EditText
-                                android:layout_width="wrap_content"
+                                android:id="@+id/userEmail"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
                                 android:textColor="@color/goodgrey"
@@ -250,7 +255,7 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:gravity="center_vertical"
@@ -264,7 +269,8 @@
                                 android:src="@drawable/ic_location_24dp" />
 
                             <EditText
-                                android:layout_width="wrap_content"
+                                android:id="@+id/userAddress"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
                                 android:hint="your address here"
@@ -276,6 +282,7 @@
                     </LinearLayout>
                 </LinearLayout>
                 <LinearLayout
+                    android:padding="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -283,25 +290,14 @@
                     android:background="@drawable/circularbordersolid"
                     android:orientation="vertical">
                     <TextView
-                        android:id="@+id/experiencebtn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:text="upload cv / resume "
                         android:fontFamily="@font/proximanovaregular"
-                        android:gravity="center"
-                        android:padding="13dp"
-                        android:text="upload any document , your resume , cv or anything i you want any internship,job or free lance work"
-                        android:textAllCaps="true"
-                        android:textColor="@color/blue"
-                        android:textSize="14sp"
+                        android:textSize="17sp"
                         android:textStyle="bold" />
-
-
-                    <LinearLayout
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/lightgrey" />
                     <Button
+                        android:layout_marginTop="10dp"
                         android:id="@+id/document"
                         android:layout_gravity="center"
                         android:textSize="15dp"
@@ -310,12 +306,17 @@
                         android:layout_height="wrap_content">
                     </Button>
 
-                    <LinearLayout
-                        android:layout_width="1dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/lightgrey" />
-
                 </LinearLayout>
+                <Button
+                    android:id="@+id/submit"
+                    android:layout_marginBottom="20dp"
+                    android:text="submit"
+                    android:textSize="15dp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp">
+                </Button>
         </LinearLayout>
         </LinearLayout>
     </ScrollView>
