--- a/StartupCarvaan/app/src/main/res/layout/activity_phone_auth.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_phone_auth.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".loginsignup.PhoneAuthActivity">
 
     <EditText
@@ -11,14 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:textSize="15sp"
+        android:textColorHint="@color/greyish"
         android:hint="enter phone number"
+        android:paddingLeft="10dp"
+        android:paddingBottom="8dp"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/getotp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.816" />
+       android:background="@drawable/input" />
 
     <Button
         android:id="@+id/getotp"
@@ -44,6 +44,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.816" />
 
+
+
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
@@ -53,4 +55,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
