--- a/StartupCarvaan/app/src/main/res/drawable/input.xml
+++ b/StartupCarvaan/app/src/main/res/drawable/input.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item
-        android:bottom="0.5dp"
-        android:left="-16px"
-        android:right="-16px"
-        android:top="-16px">
-        <shape android:shape="rectangle" >
-            <stroke
-                android:width="2px"
-                android:color="#444851" />
-
-            <solid android:color="#00FFFFFF" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <stroke
+        android:color="@color/greyish"
+        android:width="1.6dp"/>
+    <corners
+        android:radius="10dp"/>
 
 
-            <padding
-                android:bottom="2dp"
-                android:left="5dp"
-                android:right="5dp"
-                android:top="5dp" />
-        </shape>
-    </item>
-</layer-list>
+
+</shape>
