--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -6,46 +6,28 @@
     android:layout_height="match_parent"
     android:weightSum="10"
     android:orientation="vertical"
-    android:background="@drawable/loginback"
+
     android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+
     tools:context=".loginsignup.loginActivity">
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="0dp"
-      android:gravity="bottom"
-
-      android:orientation="vertical"
-      android:layout_weight="4">
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="Welcome"
-
-          android:textColor="#FFFFFF"
-          android:layout_marginRight="20dp"
-          android:layout_marginLeft="40dp"
-
-          android:textSize="36dp"/>
-      <TextView
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:text="Back"
-          android:layout_marginBottom="40dp"
-          android:textColor="#FFFFFF"
-          android:layout_marginRight="20dp"
-          android:layout_marginLeft="40dp"
-
-          android:textSize="36dp"/>
-
-  </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-android:layout_height="0dp"
-        android:gravity="center"
-        android:layout_weight="6"
+        android:layout_height="0dp"
+        android:layout_weight="4.2"
+        android:background="@color/greyish"
+        android:paddingTop="10dp"
 
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
+
+        >
+        <ImageView
+            android:layout_width="match_parent"
+
+
+            android:layout_height="match_parent"
+            android:src="@drawable/loginhy"/>
+
+
+    </LinearLayout>
 
 
 <!--    <EditText-->
@@ -192,16 +174,47 @@ android:layout_height="0dp"
 <!--            android:layout_width="150dp"-->
 <!--            android:layout_height="150dp"-->
 <!--            android:src="@drawable/logo"/>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5.8"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        >
+        <TextView
+           android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/greyish"
+
+                android:textSize="32sp"
+                android:text="Welcome"
+                android:textStyle="bold"/>
+        <TextView
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:textColor="@color/greyish"
+            android:layout_marginLeft="45dp"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            android:layout_marginRight="40dp"
+            android:text="Sign in to continue..."
+           />
+
         <LinearLayout
             android:orientation="vertical"
             android:gravity="bottom"
+
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="46dp"
                 android:text="Sign in with Phone Number"
                 android:textColor="@color/white"
                 android:gravity="center"
@@ -214,14 +227,15 @@ android:layout_height="0dp"
                 android:layout_marginLeft="5dp"
                 android:id="@+id/sign_in_button"
                 android:elevation="10dp"
-                android:layout_marginBottom="60dp"
+                android:layout_marginBottom="55dp"
                 android:background="@drawable/googlesign"
                 android:layout_width="match_parent"
 
-                android:layout_height="48dp" />
+                android:layout_height="46dp" />
 
         </LinearLayout>
     </LinearLayout>
+
 
 
 </LinearLayout>
