--- a/StartupCarvaan/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/StartupCarvaan/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/myshares"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/myshares" />
+        android:title="@string/allshares" />
 
     <item
         android:id="@+id/practice"
