--- a/StartupCarvaan/app/src/main/res/layout/fragment_allshares.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_allshares.xml
@@ -7,6 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/allsharerecyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/z_single_allshare">
