--- a/StartupCarvaan/app/src/main/res/layout/profile_main.xml
+++ b/StartupCarvaan/app/src/main/res/layout/profile_main.xml
@@ -113,6 +113,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
+                        android:id="@+id/name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -123,6 +124,7 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/proximanovaregular"
@@ -162,15 +164,15 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="97%"
+                                android:text="points"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
+                                android:id="@+id/points"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="2dp"
-                                android:text="@string/job_success"
                                 android:textSize="12sp" />
                         </LinearLayout>
                     </LinearLayout>
@@ -196,17 +198,18 @@
                             android:orientation="vertical">
 
                             <TextView
+
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="4.8/5"
+                                android:text="level"
                                 android:textSize="12sp"
                                 android:textStyle="bold" />
 
                             <TextView
+                                android:id="@+id/level"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="2dp"
-                                android:text="@string/ratings"
                                 android:textSize="12sp" />
                         </LinearLayout>
                     </LinearLayout>
@@ -216,57 +219,58 @@
 
             <!--Option Bar-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@drawable/circularbordersolid"
-                android:gravity="center"
-                android:orientation="horizontal">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="10dp"-->
+<!--                android:layout_marginBottom="10dp"-->
+<!--                android:background="@drawable/circularbordersolid"-->
+<!--                android:gravity="center"-->
+<!--                android:orientation="horizontal">-->
 
-                <TextView
-                    android:id="@+id/personalinfobtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:fontFamily="@font/proximanovaregular"
-                    android:gravity="center"
-                    android:padding="13dp"
-                    android:text="User Info"
-                    android:textAllCaps="true"
-                    android:textColor="@color/blue"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+<!--                <TextView-->
+<!--                    android:id="@+id/personalinfobtn"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="2"-->
+<!--                    android:fontFamily="@font/proximanovaregular"-->
+<!--                    android:gravity="center"-->
+<!--                    android:padding="13dp"-->
+<!--                    android:text="User Info"-->
+<!--                    android:textAllCaps="true"-->
+<!--                    android:textColor="@color/blue"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:textStyle="bold" />-->
 
-                <LinearLayout
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/lightgrey" />
+<!--                <LinearLayout-->
+<!--                    android:layout_width="1dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:background="@color/lightgrey" />-->
 
-                <TextView
-                    android:id="@+id/experiencebtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:fontFamily="@font/proximanovaregular"
-                    android:gravity="center"
-                    android:padding="13dp"
-                    android:text="Experience"
-                    android:textAllCaps="true"
-                    android:textColor="@color/lightgrey"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+<!--                <TextView-->
+<!--                    android:id="@+id/experiencebtn"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="2"-->
+<!--                    android:fontFamily="@font/proximanovaregular"-->
+<!--                    android:gravity="center"-->
+<!--                    android:padding="13dp"-->
+<!--                    android:text="Experience"-->
+<!--                    android:textAllCaps="true"-->
+<!--                    android:textColor="@color/lightgrey"-->
+<!--                    android:textSize="14sp"-->
+<!--                    android:textStyle="bold" />-->
 
-                <LinearLayout
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="@color/lightgrey" />
+<!--                <LinearLayout-->
+<!--                    android:layout_width="1dp"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:background="@color/lightgrey" />-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
             <!--Bootom Cards with sections-->
             <LinearLayout
+                android:layout_marginTop="20dp"
                 android:id="@+id/personalinfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -305,6 +309,7 @@
                         </LinearLayout>
 
                         <TextView
+                            android:id="@+id/description"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
@@ -315,6 +320,7 @@
 
                 <!--Contact Details-->
                 <LinearLayout
+                    android:layout_marginBottom="20dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -361,6 +367,7 @@
                                 android:src="@drawable/ic_call_24dp" />
 
                             <TextView
+                                android:id="@+id/phone"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
@@ -385,6 +392,7 @@
                                 android:src="@drawable/ic_email_24dp" />
 
                             <TextView
+                                android:id="@+id/email"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
@@ -409,6 +417,7 @@
                                 android:src="@drawable/ic_location_24dp" />
 
                             <TextView
+                                android:id="@+id/address"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="20dp"
@@ -420,6 +429,19 @@
 
                     </LinearLayout>
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/circularbordersolid"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+                    <WebView
+                        android:id="@+id/webview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    </WebView>
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
 
