--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -13,18 +13,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.2"
-        android:background="@color/greyish"
-        android:paddingTop="10dp"
+        android:layout_weight="4.8"
+
+
 
 
         >
         <ImageView
             android:layout_width="match_parent"
-
+            android:layout_marginTop="35dp"
 
             android:layout_height="match_parent"
-            android:src="@drawable/loginhy"/>
+            android:src="@drawable/abcd"/>
 
 
     </LinearLayout>
@@ -177,14 +177,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5.8"
+        android:layout_weight="5.2"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         >
         <TextView
            android:layout_width="match_parent"
             android:gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/greyish"
 
@@ -197,7 +197,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/greyish"
             android:layout_marginLeft="45dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="2dp"
             android:textSize="16sp"
             android:layout_marginRight="40dp"
             android:text="Sign in to continue..."
@@ -222,7 +222,7 @@
                 android:textSize="17sp"/>
             <com.google.android.gms.common.SignInButton
                 android:layout_gravity="center"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginLeft="5dp"
                 android:id="@+id/sign_in_button"
