--- a/StartupCarvaan/app/src/main/res/layout/slide_layout.xml
+++ b/StartupCarvaan/app/src/main/res/layout/slide_layout.xml
@@ -11,24 +11,32 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:weightSum="10"
         android:gravity="center_horizontal"
         >
 
         <ImageView
             android:id="@+id/slideImage"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="55dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5.8"
+            android:layout_marginTop="10dp"
 
-            android:src="@drawable/investing" />
+            android:src="@drawable/intro1" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:layout_weight="4.2">
 
         <TextView
             android:id="@+id/slideHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="22dp"
+
             tools:text="HEADING"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:layout_marginLeft="30dp"
 
 
@@ -42,14 +50,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="32dp"
-            android:textColor="#000000"
-            android:textSize="17sp"
+
+            android:textSize="16sp"
             android:gravity="center"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="15dp"
             android:layout_marginRight="32dp"
             android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
             />
-
+        </LinearLayout>
 
 
     </LinearLayout>
