--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -213,6 +213,7 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/phonebutton"
                 android:layout_width="match_parent"
                 android:layout_height="46dp"
                 android:text="Sign in with Phone Number"
