--- a/StartupCarvaan/app/src/main/res/layout/activity_phone_auth.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_phone_auth.xml
@@ -36,7 +36,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/phoneverify"
         android:gravity="center_horizontal"
         android:layout_height="match_parent">
@@ -71,6 +71,7 @@ android:layout_marginTop="12dp"
         android:backgroundTint="#FF59B563" />
     </LinearLayout>
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
