--- a/StartupCarvaan/app/src/main/res/layout/activity_main.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_marginBottom="0dp"
         app:itemIconTint="@color/white"
         android:background="@color/greyish"
-        app:menu="@menu/bottom_nav_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>
+        app:menu="@menu/bottom_nav_menu">
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
