--- a/StartupCarvaan/app/src/main/res/layout/activity_intro_slider.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_intro_slider.xml
@@ -59,7 +59,7 @@ android:paddingBottom="12dp"
         android:layout_alignParentRight="true"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#FFF4B906"
+        android:backgroundTint="#F4B906"
         android:padding="8dp"
         android:text="Skip"
         android:textColor="@color/black"
