--- a/StartupCarvaan/app/src/main/res/layout/activity_login.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_login.xml
@@ -13,9 +13,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4.8"
-
-
+        android:layout_weight="5.8"
+android:orientation="vertical"
+android:gravity="bottom|center_horizontal"
 
 
         >
@@ -24,10 +24,24 @@
             android:layout_marginTop="35dp"
 
             android:layout_height="match_parent"
-            android:src="@drawable/abcd"/>
+            android:src="@drawable/imrt"/>
+
+
 
 
     </LinearLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:gravity="center_horizontal"
+
+        android:layout_height="wrap_content"
+        android:textColor="@color/greyish"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="2dp"
+        android:textSize="16sp"
+        android:layout_marginRight="40dp"
+        android:text="Sign in to continue..."
+        />
 
 
 <!--    <EditText-->
@@ -177,31 +191,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5.2"
+        android:layout_weight="4.2"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         >
-        <TextView
-           android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_marginTop="15dp"
-                android:layout_height="wrap_content"
-                android:textColor="@color/greyish"
 
-                android:textSize="32sp"
-                android:text="Welcome"
-                android:textStyle="bold"/>
-        <TextView
-            android:layout_width="wrap_content"
-
-            android:layout_height="wrap_content"
-            android:textColor="@color/greyish"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="2dp"
-            android:textSize="16sp"
-            android:layout_marginRight="40dp"
-            android:text="Sign in to continue..."
-           />
 
         <LinearLayout
             android:orientation="vertical"
