--- a/StartupCarvaan/app/src/main/res/layout/activity_splash_screen.xml
+++ b/StartupCarvaan/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,31 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/wallpaper1"
+    android:background="@drawable/logijkr"
+    android:paddingTop="28dp"
 
    >
 
 
+
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="94dp"
-        android:layout_height="160dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="90dp"
+
+        android:layout_height="90dp"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.429"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/startupcarvaan" />
+        app:srcCompat="@drawable/logonew"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="22dp"
+        android:textColor="#E67653"
         android:text="Startup Carvaan"
+
+        android:textSize="26sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.438"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -38,9 +44,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="center"
+        android:textSize="15sp"
         android:text="Crowd funding platorm for all startups to start with"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.366"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
