--- a/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
+++ b/StartupCarvaan/app/src/main/res/layout/dailogsell.xml
@@ -94,13 +94,13 @@ android:background="@drawable/sellinput"
         android:layout_marginLeft="15dp"
         android:layout_gravity="bottom"
 
-
+        android:fontFamily="sans-serif-medium"
         android:spinnerMode="dialog"
         android:textSize="20sp"
         android:background="@drawable/spinnerbord"
         android:splitMotionEvents="true"
 
-        android:textColor="#000000"
+        android:textColor="#000000"/>
         />
 
     <Button
