--- a/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_allshare.xml
@@ -24,7 +24,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#E2E6E2">
+        android:background="#ffffff">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,7 +55,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-
+                    android:id="@+id/secondLayout"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
                     android:layout_alignParentEnd="true"
@@ -222,7 +222,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Growth"
+                        android:text="Investors"
                         android:gravity="center"
                         android:textColor="#000000"
                         android:textStyle="bold"
@@ -500,6 +500,7 @@ android:layout_marginLeft="10dp"
 
         android:layout_height="wrap_content">
         <Button
+            android:id="@+id/invest"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
