--- a/StartupCarvaan/app/src/main/res/layout/fragment_biding.xml
+++ b/StartupCarvaan/app/src/main/res/layout/fragment_biding.xml
@@ -3,12 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.biding.biding">
+    tools:context=".fragments.biding.biding"
+    android:background="@color/grey">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:text="bid here and find some rewards" />
 
 </FrameLayout>
