--- a/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
+++ b/StartupCarvaan/app/src/main/res/layout/z_single_biding.xml
@@ -1,6 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="20dp"
+    android:layout_marginTop="12dp"
+    android:layout_marginRight="30dp"
+    android:layout_marginLeft="30dp"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    app:cardElevation="15dp"
+    android:elevation="15dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
+                android:src="@drawable/loginhy"/>
+            <TextView
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="60dp"
+                android:layout_marginTop="140dp"
+                android:background="@drawable/joinbu"
+                android:text="Join"
+
+                android:textStyle="bold"
+                android:textSize="15sp"
+                android:gravity="center"
+                android:textColor="@color/white"/>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:layout_marginLeft="18dp"
+
+                android:textStyle="bold"
+
+
+                android:text="watch 200dghk "
+                android:textColor="@color/black"
+                android:textSize="15.5sp"
+                tools:autoSizeTextType="uniform"></TextView>
+            <TextView
+
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="18dp"
+             android:layout_marginTop="3.5dp"
+
+
+
+                android:text="watch 20vevdvuevudveuhvdivdibdevdeb0dghk "
+
+                android:textSize="12.5sp"
+                tools:autoSizeTextType="uniform"></TextView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:lines="1"
+                        android:layout_marginLeft="18dp"
+
+                        android:textStyle="bold"
+
+
+                        android:text=" 300 coins"
+                        android:textColor="@color/black"
+                        android:textSize="17sp"
+                        tools:autoSizeTextType="uniform"></TextView>
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+android:gravity="center"
+                        android:layout_marginLeft="18dp"
+                        android:layout_marginTop="4dp"
+
+
+
+                        android:text= "Current Price"
+
+                        android:textSize="12.5sp"
+                        tools:autoSizeTextType="uniform"></TextView>
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="right|center_vertical">
+
+                    <LinearLayout
+                        android:layout_width="140dp"
+                        android:layout_height="30dp"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/timer">
+
+                    </LinearLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
